<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.meduardaqb.wooflove.view.activity.SignUpActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/petname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_petname"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/prompt_petname"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/prompt_email"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textAllCaps="true"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/city_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_city"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/prompt_city"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:textAllCaps="true"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:imeActionId="@+id/message"
            android:imeActionLabel="@string/message"
            android:imeOptions="actionUnspecified"
            android:id="@+id/message_editext"
            android:inputType="text"
            android:lines="3"
            android:maxLines="3" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_breed_label"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />


    <android.support.v7.widget.AppCompatSpinner
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/dog_breed_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</LinearLayout>
